fix bar spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,11 +32,11 @@
       word-spacing: -$spacing-unit / 3.5;
 
       span {
-        margin-right: -1vw;
+        margin-right: -0.5vw;
       }
 
       .bar-last {
-        margin-right: 0.5vw;
+        margin-right: 0.2vw;
       }
 
       &,
